<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Bennet\nSebastian"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvJobName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/tvJobName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/job_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/tvComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem_text_1"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="8sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvJobName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvCurrentJobPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_job_post"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/tvComment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvCurrentJobPostComment"/>

    <TextView
        android:id="@+id/tvCurrentJobPostComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem_text_2"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="8sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentJobPost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvComputerScienceDiploma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diploma"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentJobPostComment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvComputerScienceDiplomaComment"/>

    <TextView
        android:id="@+id/tvComputerScienceDiplomaComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem_text_2"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="8sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvComputerScienceDiploma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>